resolves #13 cards aligned

--- a/members.css
+++ b/members.css
@@ -15,13 +15,18 @@ body{
     display: inline-block;
 }
 
+table{
+    border-collapse: separate;
+    border-spacing: 4em;
+}
+
 .member-card {
     padding: 15px;
-    border-radius: 20px;
-    margin-bottom: 15px;
-    /*background-color: #99ffcc;
-    width: 10rem*/
-    /* this is where the cards are messed up */
+    width: 10rem;
+    max-height: 450px;
+    white-space: nowrap;
+    background-color: #FFFFFF;
+    border-radius: 25px;
 }
 
 .img-thumbnail {
@@ -47,7 +52,7 @@ body{
 
 h4 {
     line-height: 22px;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .disabled {
